[gd_scene load_steps=3 format=3 uid="uid://c1a8p0bykthrt"]

[ext_resource type="Script" path="res://objects/resource_droppable.gd" id="1_vwo54"]

[sub_resource type="SpriteFrames" id="SpriteFrames_odn4o"]
animations = [{
"frames": [],
"loop": true,
"name": &"BRING",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"DROP",
"speed": 5.0
}]

[node name="ResourceDroppable" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_odn4o")
animation = &"DROP"
script = ExtResource("1_vwo54")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="BringSound" type="AudioStreamPlayer2D" parent="."]

[node name="GatherTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="finished" from="BringSound" to="." method="_on_bring_sound_finished"]
[connection signal="timeout" from="GatherTimer" to="." method="_on_gather_timer_timeout"]
